--- a/app/views/characters/_form.html.haml
+++ b/app/views/characters/_form.html.haml
@@ -1,10 +1,5 @@
 = semantic_form_for @character do |f|
-  = f.inputs "Basis" do
+  = f.inputs  do
 
-    = f.input :pinyin
-    = f.input :hanzi
-    = f.input :translation
-    = f.input :examples
-  
-
+    = f.inputs
   = f.buttons
