--- a/app/views/characters/show.html.haml
+++ b/app/views/characters/show.html.haml
@@ -1,18 +1,17 @@
-- title t('.title')
+- title "Details zu #{@character.hanzi}"
 = render "tasks"
-%p
-  %b Pinyin:
-  = @character.pinyin
-%p
-  %b Hanzi:
-  = @character.hanzi
-%p
-  %b Translation:
-  = @character.translation
-%p
-  %b Examples:
-  = @character.examples
 
-= link_to 'Edit', edit_character_path(@character)
-\|
-= link_to 'Back', characters_path
+#hanzi
+  = @character.hanzi
+#pinyin
+  = @character.pinyin
+  (
+  = @character.norm_pinyin
+  )
+
+%ul#translation
+  - @character.translation.split("\n").reject{|i| i.empty?}.each do |tr|
+    %li
+      - tr.split(";").each do |td|
+        = td
+        %br
