--- a/app/views/exercises/index.html.haml
+++ b/app/views/exercises/index.html.haml
@@ -2,4 +2,4 @@
 = render "tasks"
 Los gehts!
 
-= link_to t(".add"), "/exercises/add_word", :rel => :facebox
+= link_to t(".add"), new_selection_path, :rel => :facebox
