--- a/app/views/selections/_tasks.html.haml
+++ b/app/views/selections/_tasks.html.haml
@@ -1,6 +1,6 @@
 - set_tasks do |task|
   - if logged_in?
-    - task.add_task t("tasks.index"), :url => selections_path, :active => params[:action] == "index"
+    - task.add_task t("tasks.index"), :url => root_path, :active => params[:action] == "index"
     - task.add_task t("tasks.new"), :url => new_selection_path, :active => params[:action] == "new"
     - task.seperator
   - if ["show","edit"].include? params[:action]
