--- a/app/views/exercises/_tasks.html.haml
+++ b/app/views/exercises/_tasks.html.haml
@@ -1,6 +1,8 @@
 - set_tasks do |task|
   - task.add_task t("tasks.index"), :url => "/exercises", :active => params[:action] == "index"
   - task.add_task t("tasks.new_word"), :url => new_selection_path, :active => params[:action] == "new", :rel => :facebox
+  - task.add_task t("tasks.hanzi_start"), :url => exercise_path(1), :active => params[:id] == "1"
+  - task.add_task t("tasks.pinyin_start"), :url => exercise_path(2), :active => params[:id] == "2"
   - if params[:action] == "show"
     - if can? :edit, Character
       - task.add_task t("tasks.edit"), :url => edit_character_path, :active => params[:action] == "new", :rel => :facebox
