--- a/app/views/exercises/index.html.haml
+++ b/app/views/exercises/index.html.haml
@@ -3,7 +3,30 @@
 
 = link_to t(".add"), new_selection_path, :rel => :facebox
 
-%p(style="font-size: 1.8em;")
-  - current_user.selections.each do |s|
-    = link_to s.character.hanzi, s
-    ,
+%h2=EXERCISES.first[:name]
+%p
+  =EXERCISES.first[:description]
+  %br
+  = t "exercises.show.due", :due => Selection.count_due(1, current_user.id), :total => Selection.where(:user_id => current_user).count
+
+#buttons
+  = link_to "HanZi Training starten", exercise_path(1), :class => :button
+  = link_to "PinYin Training starten", exercise_path(2), :class => :button
+  = link_to "Neues Wort", new_selection_path, :class => :button, :rel => :facebox
+%ul.level-list
+  %li
+    Stufe 0
+    %p.hanzi-list
+      - current_user.selections.where("level_1 = 0 or level_1 is null").each do |s|
+        = link_to s.character.hanzi, s, :rel => :facebox
+
+  - (1..8).each do |level|
+    %li
+      = "Stufe #{level}"
+      %p.hanzi-list
+        - pp level
+        - current_user.selections.where("level_1 = #{level}").each do |s|
+          = link_to s.character.hanzi, s, :rel => :facebox
+
+
+
