--- a/app/assets/stylesheets/selections.css.scss
+++ b/app/assets/stylesheets/selections.css.scss
@@ -41,10 +41,7 @@ body #content {
 #buttons {
   position: fixed;
   right: 20px;
-  top: 40%;
-  .highlighted {
-    background: yellow;
-  }
+  top: 150px;
   #solve {
     text-align: center;
   }
@@ -64,13 +61,19 @@ body #content {
   display: block;
   padding: 5px;
   margin: 5px;
-  border: 1px solid #ccc;
-  background: #eee;
+  border: 1px solid white;
+  background: #333;
+  color: white;
   width: 150px;
   &:hover {
-    background: #ccc;
+    background: #666;
     text-decoration: none;
-
+  }
+  &:link, &:visited {
+    color: white;
+  }
+  &.highlighted {
+    background: #999;
   }
 }
 
@@ -109,3 +112,27 @@ body #content {
 }
 .hanzi-tone-4 { color: $tone4; }
 
+.progress_bar {
+  position: relative;
+  margin: 0 0 15px 0;
+  width: 160px;
+  margin: 0 auto;
+  border: 1px solid #CCC;
+  background: #FFF;
+
+  span {
+    position: absolute;
+    left: 0;
+    top: 0;
+    line-height: 20px;
+    background-color: #AAF0FF;
+  }
+
+  strong {
+    position: relative;
+    z-index: 10;
+    display: block;
+    line-height: 20px;
+    text-align: center;
+    }
+}
