--- a/app/assets/stylesheets/selections.css.scss
+++ b/app/assets/stylesheets/selections.css.scss
@@ -13,6 +13,11 @@ body #content {
   font-size: 100%;
   font-family: Helvetica,Verdana,Arial,sans-serif;
 }
+.qtip {
+  .hanzi {
+    font-size: 200%;
+  }
+}
 #exercise-1 {
   #hanzi-solution {
     font-size: 200px;
