--- a/app/views/exercises/_exercise_1.html.haml
+++ b/app/views/exercises/_exercise_1.html.haml
@@ -3,9 +3,7 @@
   #task
     %span#pinyin{:class => "tone-#{character.tone}"}
       =character.pinyin
-    %ul
-      - character.translation_html.html_safe.split(";").each do |char|
-        %li=char
+    = translation_list character
     #hanzi-canvas
 
 
