--- a/app/views/exercises/_exercise_2.html.haml
+++ b/app/views/exercises/_exercise_2.html.haml
@@ -5,7 +5,6 @@
     .solve
       %span{:class => "tone-#{character.tone}"}
         =character.pinyin
-      %ul
-        - character.translation_html.html_safe.split(";").each do |char|
-          %li=char
+      = translation_list character
+      = link_to "XiaoMa Definition", "http://www.xiaoma.info/hanzi.php?hz=#{CGI.escape(character.hanzi)}", :target =>"_blank"
   .clear
