--- a/app/assets/stylesheets/exercises.css.scss
+++ b/app/assets/stylesheets/exercises.css.scss
@@ -8,9 +8,10 @@
   h2 {
   }
   .exercise {
-    width: 45%;
     float: left;
     margin-right: 20px;
+    min-width: 300px;
+    max-width: 500px;
   }
   &:after {
     clear: both;
