--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -34,7 +34,7 @@ body {
 }
 
 #wrapper-menu {
-	background: #88ac0b url('/images/menu-background.png') top left repeat-x;
+	background: #900 url('/images/menu-background.png') top left repeat-x;
 	float: left;
 	width: 100%;
 }
@@ -97,7 +97,7 @@ body {
 	text-align: right;
 	color: white;
 	letter-spacing: 0.15em;
-	background: #88ac0b url('/images/menu-background.png') top left repeat-x;
+	background: #900 url('/images/menu-background.png') top left repeat-x;
 	border: 1px solid #a0c80e;
 	font-size: 80%;
 }
