--- a/app/assets/stylesheets/selections.css.scss
+++ b/app/assets/stylesheets/selections.css.scss
@@ -44,6 +44,10 @@ body #content {
   clear: both;
 }
 #buttons {
+  #level {
+    font-size: 150%;
+    text-align: center;
+  }
   position: fixed;
   right: 20px;
   top: 150px;
@@ -92,6 +96,7 @@ body #content {
 .tone-1 {
   background: url(/images/tone-1.thumb.png) no-repeat center top;
   padding-top: 10px;
+  color: $tone1;
   border-bottom: 3px solid $tone1;
 }
 .hanzi-tone-1 { color: $tone1; }
@@ -99,6 +104,7 @@ body #content {
 .tone-2 {
   background: url(/images/tone-2.thumb.png) no-repeat center top;
   padding-top: 10px;
+  color: $tone2;
   border-bottom: 3px solid $tone2;
 }
 .hanzi-tone-2 { color: $tone2; }
@@ -106,6 +112,7 @@ body #content {
 .tone-3 {
   background: url(/images/tone-3.thumb.png) no-repeat center top;
   padding-top: 10px;
+  color: $tone3;
   border-bottom: 3px solid $tone3;
 }
 .hanzi-tone-3 { color: $tone3; }
@@ -113,6 +120,7 @@ body #content {
 .tone-4 {
   background: url(/images/tone-4.thumb.png) no-repeat center top;
   padding-top: 10px;
+  color: $tone4;
   border-bottom: 3px solid $tone4;
 }
 .hanzi-tone-4 { color: $tone4; }
@@ -144,5 +152,13 @@ body #content {
 #footer {
   a {
     color: #ddd;
+  }
+}
+#hanzi a {
+  color: inherit;
+
+  text-decoration: none;
+  &:hover {
+    color: #555;
   }
 }
