edit current word for admin. fixed pinyin colorization for multiwords

--- a/app/views/exercises/_exercise_1.html.haml
+++ b/app/views/exercises/_exercise_1.html.haml
@@ -12,5 +12,5 @@
 
   #hanzi
     #hanzi-solution.solve
-      =general_tonize character.hanzi
+      =general_tonize character.hanzi, character.norm_pinyin
   .clear
