--- a/app/views/exercises/_exercise_2.html.haml
+++ b/app/views/exercises/_exercise_2.html.haml
@@ -2,7 +2,7 @@
   #task
     %span#hanzi
       .solve
-        =general_tonize character.hanzi
+        =general_tonize character.hanzi, character.norm_pinyin
       .unsolve
         = character.hanzi
 
