--- a/app/views/exercises/index.html.haml
+++ b/app/views/exercises/index.html.haml
@@ -16,11 +16,12 @@
 
       %ul.level-list
         - (0..8).each do |level|
-          %li
-            = "Stufe #{level}"
-            %p.hanzi-list
-              - current_user.selections_of_level(level, exercise[:id]).each do |s|
-                = link_to s.character.hanzi, s, :rel => :facebox, :class => (s.due?(exercise[:id]) ? "due" : "done")
+          - cache "level-#{current_user.id}-#{level}" do
+            %li
+              = "Stufe #{level}"
+              %p.hanzi-list
+                - current_user.selections_of_level(level, exercise[:id]).each do |s|
+                  = link_to s.character.hanzi, s, :rel => :facebox, :class => (s.due?(exercise[:id]) ? "due" : "done")
 .clear
 
 
