--- a/app/assets/stylesheets/exercises.css.scss
+++ b/app/assets/stylesheets/exercises.css.scss
@@ -27,3 +27,14 @@
   -moz-user-select: none;
   user-select: none;
 }
+
+#exercise-list {
+  .ex-progress {
+    position: relative;
+  }
+  .progress_bar {
+    position: absolute;
+    bottom: 16px;
+    left: 150px;
+  }
+}
