--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -2,19 +2,22 @@
 %h2
   Was ist ShuFa
 
-%p Eine starke Unterstützung beim Lernen der <strong>chinesischen Zeichen</strong>.
-%p Features:
-%ul
-  %li große Datenbank als Basis um Wörter mit einem Klick zum eigenen Lernbestand hinzuzufügen
-  %li
-    Lernüberwachung mittels
-    =link_to "Spaced Learning", "http://en.wikipedia.org/wiki/Spaced_learning"
-    um Trainingsfortschritt zu messen und zu überwachen
-  %li Schreiben von Chinesischen Zeichen mittels eines Freizeichenfeldes selbst üben
-  %li bis auf Weiteres kostenlos
-  %li Autor der Software ist selber fleißiger Nutzer. Fehler und Vorschläge direkt an info@stefanwienert.net
+.half
+
+  %p Eine starke Unterstützung beim Lernen der <strong>chinesischen Zeichen</strong>.
+  %p Features:
+  %ul#features
+    %li große Datenbank als Basis um Wörter mit einem Klick zum eigenen Lernbestand hinzuzufügen
+    %li
+      Lernüberwachung ähnlich dem
+      =link_to "Lernkarteikartensystem", "http://de.wikipedia.org/wiki/Lernkartei"
+      um Trainingsfortschritt zu messen und zu überwachen
+    %li Schreiben von Chinesischen Zeichen mittels eines Freizeichenfeldes selbst üben
+    %li bis auf Weiteres kostenlos
+    %li Autor der Software ist selber fleißiger Nutzer. Fehler und Vorschläge direkt an info@stefanwienert.net
 
 = render :template => "sessions/new"
+.clear
 
 %h2 Was kostet das?
 %p
