--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -77,20 +77,18 @@ $standard-color: #700;
 
 a.button {
       @extend .fancy-button-base;
-      //padding: 10px 20px;
-      //@include fancy-button-colors(#D65600);
       display: block;
 }
+
 #buttons .solve .button {
   display: block;
   text-align: center;
-  &#right { @include fancy-button-colors(#008600); }
-  &#wrong { @include fancy-button-colors(#860000); }
-  &#mamahuhu { @include fancy-button-colors(#868600); }
+  &#right { @include fancy-button-colors(#389e28); }
+  &#wrong { @include fancy-button-colors(#bf3030); }
+  &#mamahuhu { @include fancy-button-colors(#999); }
+  .highlight { background: #999; }
 }
-#buttons #solve {
-  @include fancy-button-colors(#333);
-}
+#buttons #solve { @include fancy-button-colors(#a60000); }
 #facebox .button {
   display: inline-block;
 }
@@ -104,10 +102,8 @@ a.button {
     @include text-shadow(1px 1px #555, -1px -1px #555);
   }
   span {
-    @include background-image(linear-gradient(#aaf,  #0000ff));
+    @include background-image(linear-gradient(#6a0,  #260, #480));
     color: white;
   }
 }
-#level {
-  @include text-shadow(2px 2px white, -2px -2px white);
-}
+#level { @include text-shadow(2px 2px white, -2px -2px white); }
