--- a/app/assets/stylesheets/selections.css.scss
+++ b/app/assets/stylesheets/selections.css.scss
@@ -124,7 +124,8 @@ body #content {
   width: 160px;
   margin: 0 auto;
   border: 1px solid #CCC;
-  background: #FFF;
+  background: #555;
+
 
   span {
     position: absolute;
