--- a/app/views/characters/show.html.haml
+++ b/app/views/characters/show.html.haml
@@ -1,4 +1,4 @@
-- title "Details zu #{@character.hanzi}"
+- title t('.title' , :character => @character.hanzi)
 = render "tasks"
 
 = render @character
