--- a/app/views/exercises/_exercise_2.html.haml
+++ b/app/views/exercises/_exercise_2.html.haml
@@ -9,5 +9,5 @@
     .solve
       =tonize character.norm_pinyin
       = translation_list character
-      = link_to "XiaoMa Definition", "http://www.xiaoma.info/hanzi.php?hz=#{CGI.escape(character.hanzi)}", :target =>"_blank"
+      =# link_to "XiaoMa Definition", "http://www.xiaoma.info/hanzi.php?hz=#{CGI.escape(character.hanzi)}", :target =>"_blank"
   .clear
