--- a/app/views/selections/_form.html.haml
+++ b/app/views/selections/_form.html.haml
@@ -1,5 +1,5 @@
 = semantic_form_for @selection do |f|
-  = f.inputs "Basis" do
+  = f.inputs t('.fieldset') do
     = f.input :character_id, :as => :hidden
     = f.input :search
   = f.buttons
