--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,32 +1,25 @@
-- title "ShuFa - Chinesche Zeichen effektiv lernen "
-%h2
-  Was ist ShuFa
+- title t('.title')
+%h2=t('.p1.title')
 
 .half
 
-  %p Eine starke Unterstützung beim Lernen der <strong>chinesischen Zeichen</strong>.
-  %p Features:
+  %p=t('.p1.answer_html')
+  %p=t('.p1.features')
   %ul#features
-    %li große Datenbank als Basis um Wörter mit einem Klick zum eigenen Lernbestand hinzuzufügen
-    %li
-      Lernüberwachung ähnlich dem
-      =link_to "Lernkarteikartensystem", "http://de.wikipedia.org/wiki/Lernkartei"
-      um Trainingsfortschritt zu messen und zu überwachen
-    %li Schreiben von Chinesischen Zeichen mittels eines Freizeichenfeldes selbst üben
-    %li bis auf Weiteres kostenlos
-    %li Autor der Software ist selber fleißiger Nutzer. Fehler und Vorschläge direkt an info@stefanwienert.net
+    - for i in (1..5)
+      %li=t(".p1.feature_#{i}_html")
 
 = render :template => "sessions/new"
 .clear
 
-%h2 Was kostet das?
-%p
-  ShuFa läuft bis auf Weiteres als Beta, und ist damit <strong>kostenlos</strong>.
-%i Für den Fall, dass der Besucheransturm überhand nimmt, und ich z.B. mehr Server mieten muss, behalte ich mir vor, bestimmte Teile des Service zu limitieren oder mit einer geringen Gebühr zu belangen. Aber auch nur im genannten Szenario. Für diesen Fall ist eine gültige E-Mail-Adresse bei der Anmeldung empfehlenswert.
+%h2=t('.p2.title')
 
-%h2 Tour
+%p=t('.p2.answer_html')
+%i=t('.p2.notice')
 
-%p Ein paar Screenshots
+%h2=t('.p3.title')
+
+%p=t('.p3.answer')
 
 = link_to "/images/tour/tour-1.png", :rel => :facebox, :title => t('.tour1') do
   = image_tag "/images/tour/tour-1-thumb.png", :alt => t('.tour1')
@@ -35,10 +28,7 @@
 = link_to "/images/tour/tour-3.png", :rel => :facebox, :title => t('.tour3') do
   = image_tag "/images/tour/tour-3-thumb.png", :alt => t('.tour3')
 
-%h2 Programmiertechnisches
+%h2=t('.p4.title')
+%p=t('.p4.answer_html')
 
-Getestet und entwickelt für Firefox und Chrome in halbwegs aktuellen Versionen.
-Shufa ist z.Z. OpenSource und kann unter
-= link_to "https://github.com/zealot128/ShuFaZuoPin", "https://github.com/zealot128/ShuFaZuoPin"
-runtergeladen werden. Das ganze ist eine Ruby-on-Rails 3.1 Anwendung.
-
+= render "tasks"
