--- a/app/views/selections/show.html.haml
+++ b/app/views/selections/show.html.haml
@@ -3,15 +3,15 @@
 
 = render @selection.character
 
-%h2 Fortschritt
-- EXERCISES.each do |exercise|
+%h2=t('.progress')
+- t('exercise_types').each do |exercise|
   %h3=exercise[:name]
   .foo
-    Stufe:
+    =t('.level')
     =@selection.send("level_#{exercise[:id]}")
   .bar
-    Nächster geplanter Besuch:
+    =t('.next_visit')
     = next_visit_words(@selection, exercise[:id])
 
-= link_to "Entfernen", @selection, :class => :button, :method => :delete
+= link_to t('.remove'), @selection, :class => :button, :method => :delete, :confirm => t('are_you_sure_title')
 
