--- a/app/views/users/_tasks.html.haml
+++ b/app/views/users/_tasks.html.haml
@@ -3,6 +3,6 @@
     - task.add_task t("tasks.exercises"), :url => exercises_path, :active => params[:action] == "index"
     - task.add_task t("tasks.edit"), :url => edit_user_path(current_user), :active => params[:action] == "edit"
   - else
-    - task.add_task t("tasks.home"), :url => "/pages/index"
+    - task.add_task t("tasks.home"), :url => index_path
     - task.add_task t("tasks.new_account"), :url => signup_path, :active => params[:action] == "new"
 
